--- a/src/API/MsBanking.Core.Account/appsettings.json
+++ b/src/API/MsBanking.Core.Account/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=WorkintechMsBankingAccount;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "Redis": "localhost:32769"
+  }
+
+  }
