--- a/src/API/MsBanking.Core.Branch/appsettings.json
+++ b/src/API/MsBanking.Core.Branch/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=WorkintechMsBankingBranch;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
-  }//TrustServerCertificate=TrueE eklemediğimde hata alıyorum
+    "DefaultConnection": "Server=.;Database=WorkintechMsBankingBranch;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "Redis": "localhost:32769"
+
+  } //TrustServerCertificate=TrueE eklemediğimde hata alıyorum,redisi defaultconnectiona ekledim
+  
 }
